# 3d_experiments

./: Cargo.toml  Makefile  README.MD  run.sh
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: camera.rs  gpu.rs  input.rs  main.rs  managed_buffer.rs  mesh.rs  render_context.rs  simplex.rs  utils.rs  world_geometry.rs
src/render_context/: debug_pass.rs  mod.rs
