[package]
name = "3d_experiments"
version = "0.0.1"
authors = ["Jeremy Day <jadaytime@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
winit = "0.22.1"
futures = "0.3.5"
bytemuck = "1.2.0"
cgmath = "0.17.0"
image = "0.23.5"
noise = "0.6.0"
