[package]
name = "jvox"
version = "0.0.1"
authors = ["Jeremy Day <jadaytime@gmail.com>"]
edition = "2018"

# See more keys and their definitions att https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs/", rev = "5c7e4e7cb27ba87c6cb0a85b9ccf253ab342563c" }
winit = "0.22.1"
futures = "0.3.5"
bytemuck = "1.2.0"
cgmath = "0.17.0"
image = "0.23.5"
noise = "0.6.0"
env_logger = "0.7.1"
